raw/PRADIPTA HARIMURTI NEVAL 6417 245150207111065/2024-11-14-11-15-08.ceg/compilation.txt
NT.java:17: error: cannot find symbol
        angkaawal = masuk[0];
                    ^
  symbol:   variable masuk
  location: class NT
1 error
Not compiled
